app/assets/stylesheets/main.css
a {
  text-decoration: none;
}

table, th, td {
  border: 1px solid black;
}

.table-hover tbody tr:hover td, .table-hover tbody tr:hover {
  background-color: #f6daca;
  color: #0d60ac;
  font-weight: bold;
  font-size: 15px;
}

.form-button {
  font-size: 16px;
  font-weight: bold;
  /* margin: 10px; */
  padding: 5px;
}

#logo {
  float: left;
  font-size: 1.6em;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: -1px;
  font-wight: bold;
}

#home-id {
  font-family: impact;
  font-size: 60px;
  text-shadow: 3px 3px #403b3b;
  color: #f2835a;
}

.btn-xlarge {
  font-size: 1.6em;
  font-family: impact;
}

.header {
  font-weight: bold;
  text-shadow: 1px 1px #333;
  font-family: sans-serif;
  color: #0d60ac;
  margin: 5px;
  text-align: center;
  padding-top: 10px;
}

/************************************************/

.notificationWindow {
    position: fixed;
    color: black;
    opacity: 1;
    background: white;
    text-align: center;
    box-shadow: 6px 6px 4px #ccc;
    border: 1px solid #000000;
    /*bottom: 25%;*/
    width:450px;
    /*width: 1122px;*/
    height: auto;
}

.parent {
  display: flex;
  flex-direction: column;
  /* justify-content: flex-end; */

}

.item {
  height: 100px;
  /* width: 450px; */
  margin: 5px;
  color: white;
  /* background: #5f729d; */
  text-align: center;
  /* line-height: 100px; */
}

/************************************************/



.form-container {
  display: flex;
  width: 225px;
}

.form-b1 {
  flex: 1;
}

.show-container {
  display: flex;
  width: 350px;
}

.show-b1 {
  flex: 1;
  flex-basis: 30%
}

.show-b2 {
  flex: 1;
  flex-basis: 30%
}

.show-b3 {
  flex: 1;
  flex-basis: 20%
}


html, body {
  height: 100%;
}
body {
  display: flex;
  flex-direction: column;
}
.content {
  flex: 1 0 auto;
}
.footer {
  flex-shrink: 0;
}

.footer div {
  background-color: #4c5050;
  height: 60px;
  color: #9a9fa2;
  text-align: left;
  margin: auto;
}

/*******************************************/

.form-format {
  font-size: 24px;
  font-weight: bold;

}

.circle {
  border-radius:50%;
}

.page-right {
    position: fixed;
    top: 50%;
    /*500px;*/
    right: 4%;
    z-index: 10;
    /*60px;*/
}

.page-left {
    position: fixed;
    /*fixed;*/
    top: 50%;
    /*500px;*/
    left: 4%;
    z-index: 10;
    /*60px;*/
}

.paging {
    color: black;
    font-size: 1.6em;
}

.paging:hover {
    color: #f2835a;
}

.article-card {
  background-color: #d8e5eb;
  /* width: 240px; */
  /* height: 245px; */
  padding: 3px;
  box-shadow: 4px 4px #827b7b;
}

.article-card-body {
  background-color: #d8e5eb;
  width: 310px;
  height: 250px;
}

.card-deck {

}

.card {
  margin: 15px;
  border: none;
}

.card-title {
  font-size: 15px;
  font-weight: bold;
}

.user-card {
  background-color: #f9875b;
  /* width: 240px; */
  /* height: 245px; */
  padding: 3px;
  box-shadow: 4px 4px #827b7b;
}


.user-card-body {
  background-color: #d8e5eb;
  width: 210px;
  height: 240px;
}

.error {
  font-size:1em;
  color:red;
}

.dropdown:hover>.dropdown-menu {
   display: inline;
   box-shadow: 4px 4px 2px #aaa;
   background-color: #e9ecf2;
   margin: 3px;
}

.dropdown-menu > a:hover {
   color: #262626;
   text-decoration: none;
   background-color: #f6daca;
}

